modified some UI and language，now can use normally

--- a/src/main/resources/l10n/JabRef_zh.properties
+++ b/src/main/resources/l10n/JabRef_zh.properties
@@ -1845,8 +1845,8 @@ Automatically_open_browse_dialog_when_creating_new_file_link=
 Import_metadata_from\:=
 Choose_the_source_for_the_metadata_import=
 Create_entry_based_on_XMP_data=
-Create_blank_entry_linking_the_PDF=
-Only_attach_PDF=
+Create_blank_entry_linking_the_PDF=\u521B\u9020\u94FE\u63A5PDF\u7684\u7A7A\u767D\u6761\u76EE
+Only_attach_PDF=\u53EA\u80FD\u6DFB\u52A0PDF
 Title=\u6807\u9898
 No_Internet_Connection.=\u65e0\u6cd5\u8fde\u63a5\u5230\u4e92\u8054\u7f51\u3002
 Create_New_Entry=\u521b\u5efa\u65b0\u8bb0\u5f55
@@ -1856,7 +1856,7 @@ Autocomplete_names_in_'Lastname,_Firstname'_format_only=\u4ec5\u81ea\u52a8\u8865
 Autocomplete_names_in_both_formats=\u81ea\u52a8\u8865\u5168\u4e24\u79cd\u683c\u5f0f\u7684\u59d3\u540d
 Marking_color_%0=\u6807\u8bb0\u989c\u8272_%0
 The_name_'comment'_cannot_be_used_as_an_entry_type_name.='comment'_\u4e0d\u80fd\u7528\u4f5c\u8bb0\u5f55\u7c7b\u578b\u540d
-You_must_enter_an_integer_value_in_the_text_field_for=
+You_must_enter_an_integer_value_in_the_text_field_for=\u4F60\u5FC5\u987B\u8F93\u5165\u4E00\u4E2A\u6574\u6570\u503C
 Send_as_email=\u4ee5\u90ae\u4ef6\u5f62\u5f0f\u53d1\u9001
 References=\u5f15\u7528
 Sending_of_emails=
@@ -1867,7 +1867,7 @@ Do_not_show_this_box_again_for_this_import=
 Always_use_this_PDF_import_style_(and_do_not_ask_for_each_import)=
 Error_creating_email=
 Entries_added_to_an_email=
-exportFormat=
+exportFormat=\u8F93\u51FA\u683C\u5F0F
 Output_file_missing=
 No_search_matches.=\u6ca1\u6709\u5339\u914d\u7684\u641c\u7d22\u7ed3\u679c
 The_output_option_depends_on_a_valid_input_option.=
@@ -1875,7 +1875,7 @@ Default_import_style_for_drag&drop_of_PDFs=
 Default_PDF_file_link_action=
 Filename_format_pattern=
 PostgreSQL_database=PostgreSQL_\u6570\u636e\u5e93
-DIN_1505=
+DIN_1505=DIN 1505
 Wrong_Format=\u9519\u8bef\u7684\u683c\u5f0f
 Additional_parameters=
 Encrypted_documents_are_not_supported=\u4e0d\u652f\u6301\u52a0\u5bc6\u7684\u6587\u6863
@@ -1934,7 +1934,7 @@ Select_document=\u9009\u62e9\u6587\u4ef6
 Edit_Group_Membership=
 Highlight_Words=
 JSTOR_import_cancelled=JSTOR_\u5bfc\u5165\u5df2\u53d6\u6d88
-HTML_list=
+HTML_list=HTML_
 Click_group_to_toggle_membership_of_selected_entries=
 Use_EMACS_23_insertion_string=
 If_possible,_normalize_this_list_of_names_to_conform_to_standard_BibTeX_name_formatting=
@@ -2021,7 +2021,7 @@ Resetting_preference_key_'%0'=
 Unknown_preference_key_'%0'=
 Unable_to_clear_preferences.=
 
-Reset_preferences_(key1,key2,..._or_'all')=
+Reset_preferences_(key1,key2,..._or_'all')=\u91CD\u7F6E\u9996\u9009\u9879\uFF08\u952E1\uFF0C\u952E2\uFF0C\u6216\u6240\u6709\u952E\uFF09
 Find_unlinked_files=
 Unselect_all=
 Expand_all=
@@ -2055,33 +2055,33 @@ Not_overwriting_existing_key._To_change_this_setting,_open_Options_->_Prefereren
 How_would_you_like_to_link_to_'%0'?=
 BibTeX_key_patterns=
 Changed_special_field_settings=
-Clear_priority=
-Clear_rank=
+Clear_priority=\u6E05\u9664\u4F18\u5148\u7EA7
+Clear_rank=\u6E05\u9664\u661F\u7EA7
 Convert_1st,_2nd,_..._to_real_superscripts=
 Enable_PDF_preview=
 Enable_special_fields=
 Five_stars=\u4e94\u661f
 Four_stars=\u56db\u661f
 Help_on_special_fields=
-Keywords_of_selected_entries=
+Keywords_of_selected_entries=\u9009\u62E9\u7684\u6587\u732E\u6761\u76EE\u7684\u5173\u952E\u8BCD
 Manage_content_selectors=
-Manage_keywords=
-No_priority_information=
-No_rank_information=
+Manage_keywords=\u5173\u952E\u8BCD\u7BA1\u7406
+No_priority_information=\u6CA1\u6709\u4F18\u5148\u7EA7\u4FE1\u606F
+No_rank_information=\u6CA1\u6709\u661F\u7EA7\u63A8\u8350\u4FE1\u606F
 One_star=\u4e00\u661f
-Priority=
-Priority_high=
-Priority_low=
-Priority_medium=
+Priority=\u4F18\u5148\u7EA7
+Priority_high=\u9AD8\u4F18\u5148\u7EA7
+Priority_low=\u4F4E\u4F18\u5148\u7EA7
+Priority_medium=\u4E2D\u4F18\u5148\u7EA7
 Quality=
-Rank=
+Rank=\u661F\u7EA7\u63A8\u8350
 Relevance=
-Set_priority_to_high=
-Set_priority_to_low=
-Set_priority_to_medium=
+Set_priority_to_high=\u8BBE\u7F6E\u9AD8\u4F18\u5148\u7EA7
+Set_priority_to_low=\u8BBE\u7F6E\u4F4E\u4F18\u5148\u7EA7
+Set_priority_to_medium=\u662F\u6307\u4E2D\u4F18\u5148\u7EA7
 Show_priority=
 Show_quality=
-Show_rank=
+Show_rank=\u663E\u793A\u661F\u7EA7\u63A8\u8350
 Show_relevance=
 Synchronize_with_keywords=
 Synchronized_special_fields_based_on_keywords=
@@ -2089,7 +2089,7 @@ Three_stars=\u4e09\u661f
 Toggle_relevance=
 Toogle_quality_assured=
 Two_stars=\u4e8c\u661f
-Update_keywords=
+Update_keywords=\u66F4\u65B0\u5173\u952E\u8BCD
 Write_values_of_special_fields_as_separate_fields_to_BibTeX=
 You_have_changed_settings_for_special_fields.=
 No_preview_available.=
@@ -2137,7 +2137,7 @@ Unknown_DiVA_entry\:_'%0'.=
 Get_BibTeX_entry_from_DiVA=
 Log=\u65e5\u5fd7
 
-ISO_690=
+ISO_690=ISO 690
 
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=
 Cancelled_merging_entries=
@@ -2350,81 +2350,81 @@ This_search_contains_entries_in_which_any_field_contains_the_regular_expression_
 This_search_contains_entries_in_which_any_field_contains_the_term_<b>%0</b>=
 plain_text=
 
-Attention\:_Password_is_stored_in_plain_text!=
-Changed_proxy_settings=
-Please_specify_both_username_and_password=
-Proxy_requires_authentication=
-You_have_changed_the_proxy_settings.=
+Attention\:_Password_is_stored_in_plain_text!=\u6CE8\u610F\uFF1A\u5BC6\u7801\u662F\u660E\u6587\u4FDD\u5B58\u7684\u3002
+Changed_proxy_settings=\u6539\u53D8\u4EE3\u7406\u8BBE\u7F6E
+Please_specify_both_username_and_password=\u8BF7\u8BBE\u7F6E\u7528\u6237\u540D\u548C\u5BC6\u7801
+Proxy_requires_authentication=\u4EE3\u7406\u9700\u8981\u6388\u6743
+You_have_changed_the_proxy_settings.=\u4F60\u6539\u53D8\u4E86\u4EE3\u7406\u8BBE\u7F6E
 
 An_autosave_file_was_found_for_this_database._This_could_indicate_that_JabRef_didn't_shut_down_cleanly_last_time_the_file_was_used.=
 CaseKeeper=
-Format_date_field_in_the_form_yyyy-mm_or_yyyy-mm-dd=
-Found_more_than_one_OpenOffice/LibreOffice_executable._Please_choose_which_one_to_connect_to\:=
-Note\:_A_full_text_search_is_currently_not_supported_for_%0=
-This_untitled_database_must_be_saved_first_to_be_included_in_the_saved_session._Save_now?=
-Unable_to_autodetect_OpenOffice/LibreOffice_installation._Please_choose_the_installation_directory_manually.=
-UnitFormatter=
+Format_date_field_in_the_form_yyyy-mm_or_yyyy-mm-dd=\u8868\u683C\u4E2D\u7684\u65E5\u671F\u683C\u5F0F\uFF1Ayyyy-mm\u6216yyyy-mm-dd
+Found_more_than_one_OpenOffice/LibreOffice_executable._Please_choose_which_one_to_connect_to\:=\u53D1\u73B0\u8D85\u8FC7\u4E00\u4E2AOpenOffice/LibreOffice\u5E94\u7528\u7A0B\u5E8F\uFF0C\u8BF7\u9009\u62E9\u4E00\u4E2A\u8FDB\u884C\u94FE\u63A5\uFF1A
+Note\:_A_full_text_search_is_currently_not_supported_for_%0=\u6CE8\u610F\uFF1A\u5168\u6587\u641C\u7D22\u73B0\u5728\u8FD8\u4E0D\u652F\u6301\u3002
+This_untitled_database_must_be_saved_first_to_be_included_in_the_saved_session._Save_now?=\u672A\u547D\u540D\u6570\u636E\u5E93\u5FC5\u987B\u5148\u4FDD\u5B58\u3002\u73B0\u5728\u4FDD\u5B58\u5417\uFF1F
+Unable_to_autodetect_OpenOffice/LibreOffice_installation._Please_choose_the_installation_directory_manually.=\u65E0\u6CD5\u81EA\u52A8\u68C0\u6D4B\u5230OpenOffice/LibreOffice\u7684\u5B89\u88C5\uFF0C\u8BF7\u624B\u5DE5\u8F93\u5165\u5B89\u88C5\u76EE\u5F55\u3002
+UnitFormatter=\u683C\u5F0F\u5316\u5355\u4F4D
 
-JabRef_no_longer_supports_'ps'_or_'pdf'_fields.<br>File_links_are_now_stored_in_the_'file'_field_and_files_are_stored_in_an_external_file_directory.<br>To_make_use_of_this_feature,_JabRef_needs_to_upgrade_file_links.<br><br>=
-This_database_uses_outdated_file_links.=
+JabRef_no_longer_supports_'ps'_or_'pdf'_fields.<br>File_links_are_now_stored_in_the_'file'_field_and_files_are_stored_in_an_external_file_directory.<br>To_make_use_of_this_feature,_JabRef_needs_to_upgrade_file_links.<br><br>=Jabref\u4E0D\u518D\u652F\u6301PS\u6216PDF\u57DF\u3002<br>\u6587\u4EF6\u94FE\u63A5\u73B0\u5728\u5B58\u50A8\u5728file\u57DF\uFF0C\u6587\u4EF6\u5B58\u50A8\u5728\u5916\u90E8\u6587\u4EF6\u76EE\u5F55\u4E2D\u3002<br>\u4F7F\u7528\u8FD9\u4E2A\u6027\u80FD\uFF0CJabRef\u9700\u8981\u5347\u7EA7\u6587\u4EF6\u94FE\u63A5\u3002
+This_database_uses_outdated_file_links.=\u8FD9\u4E2A\u6570\u636E\u5E93\u4F7F\u7528\u4E86\u8FC7\u671F\u7684\u6587\u4EF6\u94FE\u63A5\u3002
 A_string_with_that_label_already_exists=\u8be5\u6807\u7b7e\u5bf9\u5e94\u7684\u7b80\u5199\u5b57\u4e32\u5df2\u5b58\u5728
 
-Abbreviate=
-Automatically_link_files=
-Back,_help_dialog=
-Cleanup=
-Clear_search=
-Close_database=
-Close_entry_editor=
-Decrease_table_font_size=
-Entry_editor,_next_entry=
-Entry_editor,_next_panel=
-Entry_editor,_next_panel_2=
-Entry_editor,_previous_entry=
-Entry_editor,_previous_panel=
-Entry_editor,_previous_panel_2=
-Entry_editor,_store_field=
-File_list_editor,_move_entry_down=
-File_list_editor,_move_entry_up=
-Focus_entry_table=
-Forward,_help_dialog=
-Import_into_current_database=
-Import_into_new_database=
-Increase_table_font_size=
-New_article=
-New_book=
-New_entry=
-New_file_link=
-New_from_plain_text=
-New_inbook=
-New_mastersthesis=
-New_phdthesis=
-New_proceedings=
-New_unpublished=
-Next_tab=
-Preamble_editor,_store_changes=
-Previous_tab=
-Push_to_application=
-Refresh_OO=
-Resolve_duplicate_BibTeX_keys=
-Save_all=
-Save_session=
-String_dialog,_add_string=
-String_dialog,_remove_string=
-Switch_preview_layout=
-Synchronize_files=
-Unabbreviate=
-Error_occured_parsing_BibTeX_returned_from_IEEEXplore=
+Abbreviate=\u7F29\u5199
+Automatically_link_files=\u81EA\u52A8\u94FE\u63A5\u6587\u4EF6
+Back,_help_dialog=\u540E\u9000\uFF0C\u5E2E\u52A9\u5BF9\u8BDD\u6846
+Cleanup=\u6E05\u9664
+Clear_search=\u6E05\u9664\u641C\u7D22
+Close_database=\u5173\u95ED\u6570\u636E\u5E93
+Close_entry_editor=\u5173\u95ED\u6587\u732E\u6761\u76EE\u7F16\u8F91\u5668
+Decrease_table_font_size=\u51CF\u5C0F\u8868\u683C\u5B57\u4F53
+Entry_editor,_next_entry=\u4E0B\u4E00\u4E2A\u6761\u76EE
+Entry_editor,_next_panel=\u4E0B\u4E00\u4E2A\u9762\u677F
+Entry_editor,_next_panel_2=\u4E0B\u4E00\u4E2A\u9762\u677F2
+Entry_editor,_previous_entry=\u524D\u4E00\u4E2A\u6761\u76EE
+Entry_editor,_previous_panel=\u524D\u4E00\u4E2A\u9762\u677F
+Entry_editor,_previous_panel_2=\u524D\u4E00\u4E2A\u9762\u677F2
+Entry_editor,_store_field=\u5B58\u50A8\u57DF
+File_list_editor,_move_entry_down=\u4E0B\u79FB\u6761\u76EE
+File_list_editor,_move_entry_up=\u4E0A\u79FB\u6761\u76EE
+Focus_entry_table=\u805A\u7126\u6761\u76EE\u8868\u683C
+Forward,_help_dialog=\u524D\u8FDB\uFF0C\u5E2E\u52A9\u5BF9\u8BDD\u6846
+Import_into_current_database=\u5BFC\u5165\u5230\u5F53\u524D\u7684\u6570\u636E\u5E93
+Import_into_new_database=\u5BFC\u5165\u65B0\u7684\u6570\u636E\u5E93
+Increase_table_font_size=\u589E\u5927\u8868\u683C\u5B57\u4F53
+New_article=\u65B0u8BBA\u6587
+New_book=\u65B0\u4E66\u7C4D
+New_entry=\u65B0\u7684\u6761\u76EE
+New_file_link=\u65B0\u7684\u6587\u4EF6\u94FE\u63A5
+New_from_plain_text=\u65B0\u7684\u7A7A\u767D\u6587\u672C
+New_inbook=\u65B0\u7684\u4E66\u7C4D
+New_mastersthesis=\u65B0\u7684\u7855\u58EB\u8BBA\u6587
+New_phdthesis=\u65B0\u7684\u535A\u58EB\u8BBA\u6587
+New_proceedings=\u65B0\u7684\u8FDB\u5C55
+New_unpublished=\u65B0\u672A\u51FA\u7248
+Next_tab=\u4E0B\u4E00\u4E2Atab
+Preamble_editor,_store_changes=\u524D\u8A00\u7F16\u8F91\uFF0C\u5B58\u50A8\u6539\u53D8
+Previous_tab=\u4E0A\u4E00\u4E2Atab
+Push_to_application=\u63A8\u9001\u5230\u5E94\u7528\u7A0B\u5E8F
+Refresh_OO=\u5237\u65B0OO
+Resolve_duplicate_BibTeX_keys=\u91CD\u65B0\u5206\u6790\u91CD\u590D\u7684key
+Save_all=\u4FDD\u5B58\u6240\u6709
+Save_session=\u4FDD\u5B58session
+String_dialog,_add_string=\u5B57\u7B26\u4E32\u5BF9\u8BDD\u6846\uFF0C\u6DFB\u52A0\u5B57\u7B26\u4E32
+String_dialog,_remove_string=\u5B57\u7B26\u4E32\u5BF9\u8BDD\u6846\uFF0C\u79FB\u9664\u5B57\u7B26\u4E32
+Switch_preview_layout=\u5207\u6362\u9884\u89C8\u9762\u677F
+Synchronize_files=\u540C\u6B65\u6587\u4EF6
+Unabbreviate=\u7981\u6B62\u7F29\u5199
+Error_occured_parsing_BibTeX_returned_from_IEEEXplore=\u8F6C\u6362BibTex\u5230IEEXplore\u65F6\u53D1\u751F\u9519\u8BEF
 
-should_contain_a_protocol=
-Copy_preview=
+should_contain_a_protocol=\u5E94\u8BE5\u5305\u542B\u4E00\u4E2A\u534F\u8BAE
+Copy_preview=\u590D\u5236\u9884\u89C8
 
-Automatically_setting_file_links=
-Regenerating_bibtex_keys_according_to_metadata=
-No_meta_data_present_in_bibfile._Cannot_regenerate_bibtex_keys=
+Automatically_setting_file_links=\u81EA\u52A8\u8BBE\u7F6E\u6587\u4EF6\u94FE\u63A5
+Regenerating_bibtex_keys_according_to_metadata=\u6839\u636E\u5143\u6570\u636E\u4EA7\u751F\u6587\u732Ekey
+No_meta_data_present_in_bibfile._Cannot_regenerate_bibtex_keys=bib\u6587\u4EF6\u4E2D\u6CA1\u6709\u5143\u6570\u636E\uFF0C\u4E0D\u80FD\u4EA7\u751F\u6587\u732E\u7684key
 
-Regenerate_all_keys_for_the_entries_in_a_bibtex_file=
+Regenerate_all_keys_for_the_entries_in_a_bibtex_file=\u91CD\u65B0\u4EA7\u751F\u6570\u636E\u5E93\u4E2D\u7684\u6240\u6709key
 
-Show_debug_level_messages=
+Show_debug_level_messages=\u663E\u793A\u8C03\u8BD5\u7EA7\u522B\u4FE1\u606F
 
-Export_Sorting=
+Export_Sorting=\u8F93\u51FA\u6392\u5E8F
